apps/ecran/ecran-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ecran-worker
  name: ecran-worker
  namespace: ecran
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ecran-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecran-worker
    spec:
      imagePullSecrets:
        - name: kalmyk-registry
      containers:
        - name: ecran-worker
          image: kalmyk.duckdns.org/lab/ecran-worker:0.78.2
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "100Mi"
