apps/ecran/java-standby-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-standby
  namespace: ecran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-standby
  template:
    metadata:
      labels:
        app: java-standby
    spec:
      imagePullSecrets:
        - name: kalmyk-registry
      containers:
        - name: java-standby
          image: kalmyk.duckdns.org/lab/java-executor
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
