apps/ecran/riposte-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riposte
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riposte
  template:
    metadata:
      labels:
        app: riposte
    spec:
      containers:
        - name: riposte
          image: kalmyk.duckdns.org/lab/riposte
          ports:
            - containerPort: 4321
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
