apps/ecran/java-standby-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-standby-service
  namespace: ecran
spec:
  selector:
    app: java-standby
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
