apps/ecran/riposte-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riposte
spec:
  selector:
    app: riposte
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4321
