apps/ecran/standby-allow-internal-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: standby-allow-internal-egress
  namespace: ecran
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ecran
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecran
          podSelector:
            matchLabels:
              app: java-standby
      ports:
        - protocol: TCP
          port: 9090
